Java build correction, remove duplicates from Service-List